--- a/index.html
+++ b/index.html
@@ -1,97 +1,96 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
-<head>
-
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Somesh Singh webpage">
-    <meta name="author" content="Somesh">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Somesh Singh webpage" />
+    <meta name="author" content="Somesh" />
 
     <title>Somesh Singh</title>
 
     <!-- Reseting CSS       -->
-    <link href="css/normalize.css" rel="stylesheet">
+    <link href="css/normalize.css" rel="stylesheet" />
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet" />
 
     <!-- Custom CSS -->
-    <link href="css/mystylesheet.css" rel="stylesheet">
+    <link href="css/mystylesheet.css" rel="stylesheet" />
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-      <!-- Adding a favicon -->
-<!--	<link rel="shortcut icon" href="img/favicon_IIT-M.png" type="image/x-icon" />
+    <!-- Adding a favicon -->
+    <!--	<link rel="shortcut icon" href="img/favicon_IIT-M.png" type="image/x-icon" />
 	<link rel="shortcut icon" href="img/favicon_s_blue.png" type="image/x-icon" /> -->
-	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
+  </head>
 
-</head>
-
-<body>
-
+  <body>
     <!-- Navigation -->
 
     <div class="container">
-	<h1 style="font-size:5rem; margin-bottom: 0.3em;">Somesh Singh</h1>
-<!--
+      <h1 style="font-size: 5rem; margin-bottom: 0.3em">Somesh Singh</h1>
+      <!--
 	<h4 style="margin-top: 0.3rem; margin-left: 0.5rem; margin-bottom:1em;">PhD Candidate,
 	 <a href = "http://www.cse.iitm.ac.in/" target="_blank">CSE</a>,
 	 <a href = "https://www.iitm.ac.in/" target="_blank">IITM</a>
 	</h4>
 -->
-    	   <nav class="navbar navbar-inverse navbar-static-top" >
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                  </button>
-                  <!--jQuery is required for the toggle button to work -->
-                <a class="navbar-brand initialism" href="index.html"> about me</a>
-            </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav initialism" >
-                    <li >
-                        <a href="research.html">research</a>
-                    </li>
-                  <!--
+      <nav class="navbar navbar-inverse navbar-static-top">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button
+            type="button"
+            class="navbar-toggle"
+            data-toggle="collapse"
+            data-target="#bs-example-navbar-collapse-1"
+          >
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <!--jQuery is required for the toggle button to work -->
+          <a class="navbar-brand initialism" href="index.html"> about me</a>
+        </div>
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav initialism">
+            <li>
+              <a href="research.html">research</a>
+            </li>
+            <!--
                     <li>
                         <a href="academics.html">academics</a>
                     </li>
                   -->
-                    <li>
-                        <a href="mentor.html">mentoring</a>
-                    </li>
-                    <li>
-                        <a href="misc.html">miscellaneous</a>
-                    </li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-  	 </nav>
+            <li>
+              <a href="mentor.html">mentoring</a>
+            </li>
+            <li>
+              <a href="misc.html">miscellaneous</a>
+            </li>
+          </ul>
         </div>
-        <!-- /.container -->
+        <!-- /.navbar-collapse -->
+      </nav>
+    </div>
+    <!-- /.container -->
 
-       <!-- Page Content -->
+    <!-- Page Content -->
     <div class="container">
-
-        <div class="row">
-
-	<div class="col-sm-3 col-lg-4">
-	<img src="img/me.jpg"  class="img-responsive" alt="Somesh's pic">
+      <div class="row">
+        <div class="col-sm-3 col-lg-4">
+          <img src="img/me.jpg" class="img-responsive" alt="Somesh's pic" />
         </div>
-            <div class="col-sm-9 col-lg-8">
- <!--
+        <div class="col-sm-9 col-lg-8">
+          <!--
                 <h1>Starting with BootStrap</h1>
                 <p class="lead"></p>
                 <ul class="list-unstyled">
@@ -99,8 +98,8 @@
                     <li>jQuery v1.11.1</li>
                 </ul>
  -->
-        <p>
-<!--	Hello!
+          <p>
+            <!--	Hello!
  I am a Ph.D. student in the department of
 <a href="http://www.cse.iitm.ac.in/" target="_blank">
 Computer Science and Engineering
@@ -111,53 +110,53 @@ IIT Madras</a>.
 I am advised by
 <a href = "http://www.cse.iitm.ac.in/~rupesh/" target="_blank">Dr. Rupesh Nasre</a>.
 My research focuses on designing techniques for accelerating large-scale graph analytics on -->
-<!-- <em>large</em> graphs using -->
-<!-- GPUs, aided by approximate computing.-->
-I was a post-doctoral researcher
-<!--
+            <!-- <em>large</em> graphs using -->
+            <!-- GPUs, aided by approximate computing.-->
+            I am a software engineer at Siemens EDA in Grenoble, France. I was a post-doctoral
+            researcher
+            <!--
  with <a href="https://www.inria.fr/" target="_blank">INRIA</a>
 -->
-in the
-<a href="http://www.ens-lyon.fr/LIP/ROMA/" target="_blank">ROMA</a>
-team
-at
-<a href="http://www.ens-lyon.fr/LIP/" target="_blank">LIP</a>,
-ENS de Lyon, where I was hosted by
-<a href = "https://perso.ens-lyon.fr/bora.ucar/" target="_blank">Dr. Bora Uçar</a>.
-
-Before that, I obtained my Ph.D. (and Master's) from the
-<a href="http://www.cse.iitm.ac.in/" target="_blank">
-Indian Institute of Technology Madras</a> under the supervision of
-<!--I was advised by -->
-<a href = "http://www.cse.iitm.ac.in/~rupesh/" target="_blank">Dr. Rupesh Nasre</a>.
-        </p>
-<!--
+            in the
+            <a href="http://www.ens-lyon.fr/LIP/ROMA/" target="_blank">ROMA</a>
+            team at
+            <a href="http://www.ens-lyon.fr/LIP/" target="_blank">LIP</a>, ENS de Lyon, where I was
+            hosted by
+            <a href="https://perso.ens-lyon.fr/bora.ucar/" target="_blank">Dr. Bora Uçar</a>. Before
+            that, I obtained my Ph.D. (and Master's) from the
+            <a href="http://www.cse.iitm.ac.in/" target="_blank">
+              Indian Institute of Technology Madras</a
+            >
+            under the supervision of
+            <!--I was advised by -->
+            <a href="http://www.cse.iitm.ac.in/~rupesh/" target="_blank">Dr. Rupesh Nasre</a>.
+          </p>
+          <!--
 	 <p>
         I obtained my Bachelor's in Computer Science and Engineering from the
 <a href = "http://nituk.ac.in/" target="_blank">National Institute of Technology Uttarakhand</a>.
         </p>
 -->
-	<hr />
+          <hr />
 
-	<h3>Contact:</h3>
+          <h3>Contact:</h3>
 
-	<p>
-		<b>Somesh Singh</b><br/>
-	<!--<a href = "http://pace.cse.iitm.ac.in/" target="_blank"> PACE Lab</a>,
+          <p>
+            <b>Somesh Singh</b><br />
+            <!--<a href = "http://pace.cse.iitm.ac.in/" target="_blank"> PACE Lab</a>,
 	  BSB 331-A <br/>
 	  Dept. of CSE<br/>
 	  IIT Madras - 600 036.<br/> -->
-	<!--
+            <!--
       Office: M7.306 <br/>
       LIP (UMR 5668 -- CNRS, Inria, ENS de Lyon, UCB Lyon 1) <br/>
       ENS de Lyon <br/>
       46, allée d'Italie <br/>
       69007 Lyon, France. <br/>
       <br/> -->
-      <em>Email</em>: {firstname} (dot) {lastname}1992 (at) gmail (dot) com
+            <em>Email</em>: {firstname} (dot) {lastname}1992 (at) gmail (dot) com
 
-
-    <!--
+            <!--
 <ul>
 
 <li>
@@ -170,44 +169,53 @@ Indian Institute of Technology Madras</a> under the supervision of
 
 </ul>
 -->
-
-	</p>
-<!--    <p>
+          </p>
+          <!--    <p>
 	   <b>I am currently on the job market.</b> (expected graduation: July 2020)
 	</p>  -->
         </div>
+      </div>
+      <!-- /.row -->
+      <hr />
 
+      <div>
+        <span style="float: right">
+          <a href="https://github.com/ssomesh/" target="_blank">
+            <img
+              src="img/github.png"
+              alt="View Somesh Singh's GitHub Repository"
+              width="32"
+              height="32"
+              style="padding: 5px"
+              border="0"
+            />
+          </a>
 
-        </div>
-        <!-- /.row -->
-<hr />
+          <a href="https://www.linkedin.com/in/somesh-singh-17aab053" target="_blank">
+            <img
+              src="img/linkedin_2000px.svg.png"
+              alt="View Somesh Singh's profile on LinkedIn"
+              width="32"
+              height="32"
+              style="padding: 5px"
+              border="0"
+            />
+          </a>
 
-<div>
+          <a href="https://orcid.org/0000-0002-7648-9979" target="_blank">
+            <img
+              src="img/orcid_id_1024px.svg.png"
+              alt="View Somesh Singh's ORCID record"
+              width="32"
+              height="32"
+              style="padding: 5px"
+              border="0"
+            />
+          </a>
+        </span>
 
-<span style="float:right">
-
-    <a href="https://github.com/ssomesh/" target="_blank">
-     <img
-          src="img/github.png"
-          alt="View Somesh Singh's GitHub Repository" width="32" height="32" style="padding: 5px;" border="0">
-    </a>
-
-    <a href="https://www.linkedin.com/in/somesh-singh-17aab053" target="_blank">
-     <img
-          src="img/linkedin_2000px.svg.png"
-          alt="View Somesh Singh's profile on LinkedIn" width="32" height="32" style="padding: 5px;" border="0">
-    </a>
-
-    <a href="https://orcid.org/0000-0002-7648-9979" target="_blank">
-     <img
-          src="img/orcid_id_1024px.svg.png"
-          alt="View Somesh Singh's ORCID record" width="32" height="32" style="padding: 5px;" border="0">
-    </a>
-</span>
-
-
-<!-- Removing the display of last updated date -->
-<!--
+        <!-- Removing the display of last updated date -->
+        <!--
 
   <div align="left">
 
@@ -242,9 +250,7 @@ Indian Institute of Technology Madras</a> under the supervision of
   </p>
   </div>
   -->
-
-  </div>
-
+      </div>
     </div>
     <!-- /.container -->
 
@@ -253,11 +259,5 @@ Indian Institute of Technology Madras</a> under the supervision of
 
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
-
-</body>
-
+  </body>
 </html>
-
-
-
-
