--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@ I am advised by
 My research focuses on designing techniques for accelerating large-scale graph analytics on -->
             <!-- <em>large</em> graphs using -->
             <!-- GPUs, aided by approximate computing.-->
-            I am a software engineer at Siemens EDA in Grenoble, France. I was a post-doctoral
-            researcher
+            I am a software engineer at Siemens EDA in Grenoble, France. Previously, I was a
+            post-doctoral researcher
             <!--
  with <a href="https://www.inria.fr/" target="_blank">INRIA</a>
 -->
