--- a/misc.html
+++ b/misc.html
@@ -101,8 +101,8 @@
 <li>
 <dl>
   <a href="docs/certificates/Certificate_HLF_SinghSomesh.pdf" target="_blank">
-  Selected</a>
-  for attending the
+  Attended</a>
+  the
   <a href= "https://www.heidelberg-laureate-forum.org/" target="_blank">
       Heidelberg Laureate Forum</a>.
        <span style="float:right; font-weight:normal; font-style: italic;"> September 2020 </span>
@@ -297,7 +297,7 @@
 <a href="https://topal.gitlabpages.inria.fr/" target="_blank">TOPAL Inria Team</a>, Bordeaux, France.
 
   <span style="float:right;font-weight:normal; font-style:italic">
-    March 2024 &amp; December 2023 
+    March 2024 &amp; December 2023
   </span>
 </dl>
 </li>
