--- a/misc.html
+++ b/misc.html
@@ -101,8 +101,8 @@
 <li>
 <dl>
   <a href="docs/certificates/Certificate_HLF_SinghSomesh.pdf" target="_blank">
-  Attended</a>
-  the
+  Participated</a>
+  in the
   <a href= "https://www.heidelberg-laureate-forum.org/" target="_blank">
       Heidelberg Laureate Forum</a>.
        <span style="float:right; font-weight:normal; font-style: italic;"> September 2020 </span>
@@ -416,7 +416,7 @@ Sparse Days 2022</a>, Saint-Girons, France.
        Talk</a>
  at
   <a href= "https://www.qub.ac.uk/schools/eeecs/" target="_blank">
-  Queen’s University Belfast</a>.
+  Queen's University Belfast</a>.
 
   <span style="float:right;font-weight:normal; font-style:italic">
     May 2021
