--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ I am advised by
 My research focuses on designing techniques for accelerating large-scale graph analytics on -->
             <!-- <em>large</em> graphs using -->
             <!-- GPUs, aided by approximate computing.-->
-            I am a R&amp;D software engineer at Siemens EDA in Grenoble, France. Previously, I was a
+            I am a R&amp;D software engineer at Siemens EDA in Meylan, Grenoble, France. Previously, I was a
             post-doctoral researcher
             <!--
  with <a href="https://www.inria.fr/" target="_blank">INRIA</a>
@@ -122,7 +122,7 @@ My research focuses on designing techniques for accelerating large-scale graph a
             team at
             <a href="http://www.ens-lyon.fr/LIP/" target="_blank">LIP</a>, ENS de Lyon, where I was
             hosted by
-            <a href="https://perso.ens-lyon.fr/bora.ucar/" target="_blank">Dr. Bora Uçar</a>. Before
+            <a href="https://perso.ens-lyon.fr/bora.ucar/" target="_blank">Dr. Bora Uçar</a>. Prior to
             that, I obtained my Ph.D. (and Master's) from the
             <a href="http://www.cse.iitm.ac.in/" target="_blank">
               Indian Institute of Technology Madras</a
