--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@ I am advised by
 My research focuses on designing techniques for accelerating large-scale graph analytics on -->
             <!-- <em>large</em> graphs using -->
             <!-- GPUs, aided by approximate computing.-->
-            I am a R&amp;D software engineer at Siemens EDA in Meylan, Grenoble, France. Previously, I was a
-            post-doctoral researcher
+            I am a R&amp;D software engineer at Siemens EDA in Meylan, Grenoble, France. Previously,
+            I was a post-doctoral researcher
             <!--
  with <a href="https://www.inria.fr/" target="_blank">INRIA</a>
 -->
@@ -122,8 +122,8 @@ My research focuses on designing techniques for accelerating large-scale graph a
             team at
             <a href="http://www.ens-lyon.fr/LIP/" target="_blank">LIP</a>, ENS de Lyon, where I was
             hosted by
-            <a href="https://perso.ens-lyon.fr/bora.ucar/" target="_blank">Dr. Bora Uçar</a>. Prior to
-            that, I obtained my Ph.D. (and Master's) from the
+            <a href="https://perso.ens-lyon.fr/bora.ucar/" target="_blank">Dr. Bora Uçar</a>. Prior
+            to that, I obtained my Ph.D. (and Master's) from the
             <a href="http://www.cse.iitm.ac.in/" target="_blank">
               Indian Institute of Technology Madras</a
             >
@@ -142,7 +142,7 @@ My research focuses on designing techniques for accelerating large-scale graph a
           <h3>Contact:</h3>
 
           <p>
-            <b>Somesh Singh</b><br />
+          <!--  <b>Somesh Singh</b><br /> -->
             <!--<a href = "http://pace.cse.iitm.ac.in/" target="_blank"> PACE Lab</a>,
 	  BSB 331-A <br/>
 	  Dept. of CSE<br/>
@@ -154,9 +154,10 @@ My research focuses on designing techniques for accelerating large-scale graph a
       46, allée d'Italie <br/>
       69007 Lyon, France. <br/>
       <br/> -->
-            <em>Email</em>: {firstname} (dot) {lastname}1992 (at) gmail (dot) com
+<!--
+            <em>Email</em>:
+            {firstname} (dot) {lastname}1992 (at) gmail (dot) com -->
 
-            <!--
 <ul>
 
 <li>
@@ -164,11 +165,10 @@ My research focuses on designing techniques for accelerating large-scale graph a
 </li>
    <br/>
 <li>
-   {firstname} (dot) {lastname} (at) ens-lyon (dot) fr
+   {firstname} (dot) {lastname} (at) siemens (dot) com
 </li>
 
 </ul>
--->
           </p>
           <!--    <p>
 	   <b>I am currently on the job market.</b> (expected graduation: July 2020)
@@ -261,4 +261,3 @@ My research focuses on designing techniques for accelerating large-scale graph a
     <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
-
