--- a/research.html
+++ b/research.html
@@ -139,7 +139,7 @@ Currently, my focus is on optimizing and enhancing the performance of sparse mat
 Efficient Parallel Sparse Tensor Contraction*
 </h3>
 <h4 style="font-size: 13pt"><i>Somesh Singh,&#32;Bora U&#231;ar,</i></h4>
-<h4 style="font-size: 13pt">IEEE Transactions on Parallel and Distributed Systems (TPDS), 2025</h4>
+<h4 style="font-size: 13pt">in IEEE Transactions on Parallel and Distributed Systems (TPDS), 2025</h4>
 <p style="font-size: 11pt">
   <a data-toggle="collapse" href="#tr-hal" aria-expanded="false" aria-controls="tr-hal">
    (abstract)
