--- a/research.html
+++ b/research.html
@@ -146,6 +146,8 @@ Efficient Parallel Sparse Tensor Contraction*
   </a>
 
   <a href="https://hal.science/hal-04659658" target="_blank">(preprint)</a>
+
+  <a href="https://doi.org/10.1109/TPDS.2025.3557750" target="_blank">(doi)</a>
 </p>
 
 <p class="collapse" id="tr-hal" style="font-size: 11pt">
