--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@ My research focuses on designing techniques for accelerating large-scale graph a
             <!-- <em>large</em> graphs using -->
             <!-- GPUs, aided by approximate computing.-->
             I am a R&amp;D software engineer at Siemens EDA in Meylan, Grenoble, France. Previously,
-            I was a post-doctoral researcher
-            with Inria, CNRS and Labex MILYON
+            I was a postdoctoral researcher
+            with Inria, CNRS, and Labex MILYON,
             in the
             <a href="http://www.ens-lyon.fr/LIP/ROMA/" target="_blank">ROMA</a>
             team at
