--- a/research.html
+++ b/research.html
@@ -145,6 +145,7 @@ Efficient Parallel Sparse Tensor Contraction*
    (abstract)
   </a>
 
+  <a href="docs/papers/tpds25.pdf" target="_blank">(pdf)</a>
   <a href="https://hal.science/hal-05047235" target="_blank">(preprint)</a>
 
   <a href="https://doi.org/10.1109/TPDS.2025.3557750" target="_blank">(doi)</a>
