--- a/misc.html
+++ b/misc.html
@@ -167,10 +167,6 @@
 	  Concurrency and Computation: Practice and Experience</a> (since 2021)
   [<a href="docs/certificates/CPE_Reviewer_Certificate_2021.pdf" target="_blank">certificate</a>],
 
-
-  <a href= "https://www.sciencedirect.com/journal/computer-physics-communications" target="_blank">
-	  Computer Physics Communications</a> (since 2023),
-
   <a href= "https://www.springer.com/journal/41403" target="_blank">
       Transactions of the Indian National Academy of Engineering</a> (since 2018),
 
@@ -208,6 +204,9 @@
 <dl>
     Subreviewer:
 
+  <a href= "https://sc25.supercomputing.org/" target="_blank">
+       SC 2025</a>,
+	
   <a href= "https://sc24.supercomputing.org/" target="_blank">
        SC 2024</a>,
 
