--- a/misc.html
+++ b/misc.html
@@ -167,11 +167,11 @@
 	  Concurrency and Computation: Practice and Experience</a> (since 2021)
   [<a href="docs/certificates/CPE_Reviewer_Certificate_2021.pdf" target="_blank">certificate</a>],
 
-  <a href= "https://www.springer.com/journal/41403" target="_blank">
-      Transactions of the Indian National Academy of Engineering</a> (since 2018),
-
   <a href= "https://ieeexplore.ieee.org/xpl/aboutJournal.jsp?punumber=4563995" target="_blank">
-	 IEEE Embedded Systems Letters</a> (since 2017).
+	 IEEE Embedded Systems Letters</a> (since 2017),
+
+  <a href= "https://www.springer.com/journal/41403" target="_blank">
+      Transactions of the Indian National Academy of Engineering</a> (since 2018).
 
 </dl>
 </li>
