--- a/research.html
+++ b/research.html
@@ -139,7 +139,7 @@ Currently, my focus is on optimizing and enhancing the performance of sparse mat
 Efficient Parallel Sparse Tensor Contraction*
 </h3>
 <h4 style="font-size: 13pt"><i>Somesh Singh,&#32;Bora U&#231;ar,</i></h4>
-<h4 style="font-size: 13pt">in IEEE Transactions on Parallel and Distributed Systems (TPDS), 2025</h4>
+<h4 style="font-size: 13pt">in IEEE Transactions on Parallel and Distributed Systems (TPDS), 2025.</h4>
 <p style="font-size: 11pt">
   <a data-toggle="collapse" href="#tr-hal" aria-expanded="false" aria-controls="tr-hal">
    (abstract)
@@ -160,7 +160,7 @@ We investigate the performance of algorithms for sparse tensor-sparse tensor mul
 BANG: Billion-Scale Approximate Nearest Neighbour Search using a Single GPU
 </h3>
 <h4 style="font-size: 13pt"><i>Karthik V, Saim Khan, Somesh Singh, Harsha Vardhan Simhadri, Jyothi Vedurada,</i></h4>
-<h4 style="font-size: 13pt">in IEEE Transactions on Big Data (TBD), 2025</h4>
+<h4 style="font-size: 13pt">in IEEE Transactions on Big Data (TBD), 2025.</h4>
 <!-- <h4 style="font-size: 13pt">as arXiv preprint <em>arXiv:2401.11324</em>, 2024.</h4> -->
 <p style="font-size: 11pt">
   <a data-toggle="collapse" href="#tbd24" aria-expanded="false" aria-controls="tbd24">
