--- a/index.html
+++ b/index.html
@@ -152,24 +152,12 @@ My research focuses on designing techniques for accelerating large-scale graph a
       46, allée d'Italie <br/>
       69007 Lyon, France. <br/>
       <br/> -->
-<!--
+
             <em>Email</em>:
-            {firstname} (dot) {lastname}1992 (at) gmail (dot) com -->
-
-<ul>
-
-<li>
-    {firstname} (dot) {lastname}1992 (at) gmail (dot) com
-</li>
-   <br/>
-<li>
-   {firstname} (dot) {lastname} (at) siemens (dot) com
-</li>
-
-</ul>
+            {firstname} (dot) {lastname} (at) siemens (dot) com 
           </p>
           <!--    <p>
-	   <b>I am currently on the job market.</b> (expected graduation: July 2020)
+	   <b>I am currently on the job market.</b>
 	</p>  -->
         </div>
       </div>
