--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ My research focuses on designing techniques for accelerating large-scale graph a
 -->
           <hr />
 
-          <h3>Contact:</h3>
+          <h3>Contact</h3>
 
           <p>
           <!--  <b>Somesh Singh</b><br /> -->
