--- a/mentor.html
+++ b/mentor.html
@@ -142,9 +142,20 @@
 <ul>
 <li>
 <dl>
+  <dt> Sandeep Reddy<span style="font-weight:normal;">, 
+	<a href = "https://iitpkd.ac.in" target="_blank"> IIT Palakkad</a>, Kerala </span>
+       <span style="float:right; font-weight:normal; font-style: italic;">June 2025 </span>
+ </dt>
+  <dd style="color:#C4820E;">
+       GPU parallel CVRP
+   </dd>   
+</dl>
+</li>
+<li>
+<dl>
   <dt> 
      Milind Srivastava<span style="font-weight:normal;">, 
-	<a href = "https://www.iitm.ac.in/" target="_blank">IIT Madras</a>, Chennai </span> 
+	<a href = "https://www.iitm.ac.in" target="_blank">IIT Madras</a>, Chennai </span> 
        <span style="float:right;font-weight:normal; font-style: italic;">December 2016 </span>
   </dt>
   <dd>  
@@ -156,7 +167,7 @@
 <li>
 <dl>
   <dt> Ronak Jayesh Shukla<span style="font-weight:normal;">, 
-	<a href = "https://vnit.ac.in/" target="_blank"> VNIT</a>, Nagpur </span>
+	<a href = "https://vnit.ac.in" target="_blank"> VNIT</a>, Nagpur </span>
        <span style="float:right; font-weight:normal; font-style: italic;">June 2015 </span>
  </dt>
   <dd> 
@@ -165,6 +176,7 @@
  </dd>
 </dl>
 </li>
+</ul>
 </div>
            </div>
 
