--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ at
 <a href="http://www.iitm.ac.in/" target="_blank">
 IIT Madras</a>.
 I am advised by
-<a href = "http://www.cse.iitm.ac.in/~rupesh/" target="_blank">Dr. Rupesh Nasre</a>.
+<a href = "http://www.cse.iitm.ac.in/~rupesh/" target="_blank">Rupesh Nasre</a>.
 My research focuses on designing techniques for accelerating large-scale graph analytics on -->
             <!-- <em>large</em> graphs using -->
             <!-- GPUs, aided by approximate computing.-->
