--- a/mentor.html
+++ b/mentor.html
@@ -143,11 +143,11 @@
 <li>
 <dl>
   <dt> Sandeep Reddy<span style="font-weight:normal;">, 
-	<a href = "https://iitpkd.ac.in" target="_blank"> IIT Palakkad</a>, Kerala </span>
+	<a href = "https://iitpkd.ac.in" target="_blank"> IIT Palakkad</a></span>
        <span style="float:right; font-weight:normal; font-style: italic;">June 2025 </span>
  </dt>
   <dd style="color:#C4820E;">
-       GPU parallel CVRP
+       Parallel CVRP on GPU
    </dd>   
 </dl>
 </li>
@@ -155,7 +155,7 @@
 <dl>
   <dt> 
      Milind Srivastava<span style="font-weight:normal;">, 
-	<a href = "https://www.iitm.ac.in" target="_blank">IIT Madras</a>, Chennai </span> 
+	<a href = "https://www.iitm.ac.in" target="_blank">IIT Madras</a></span> 
        <span style="float:right;font-weight:normal; font-style: italic;">December 2016 </span>
   </dt>
   <dd>  
@@ -167,7 +167,7 @@
 <li>
 <dl>
   <dt> Ronak Jayesh Shukla<span style="font-weight:normal;">, 
-	<a href = "https://vnit.ac.in" target="_blank"> VNIT</a>, Nagpur </span>
+	<a href = "https://vnit.ac.in" target="_blank"> VNIT</a></span>
        <span style="float:right; font-weight:normal; font-style: italic;">June 2015 </span>
  </dt>
   <dd> 
