--- a/mentor.html
+++ b/mentor.html
@@ -126,7 +126,7 @@
  <dl>
    <dt> 
       Tejas Shah<span style="font-weight:normal;">,
-   <a href = "https://www.iitm.ac.in/" target="_blank">IIT Madras</a>, Chennai </span> 
+   <a href = "https://www.iitm.ac.in/" target="_blank">IIT Madras</a></span> 
         <span style="float:right;font-weight:normal; font-style: italic;"> 2017-18  </span>    
    </dt>
    <dd style="color:#C4820E;">
