--- a/misc.html
+++ b/misc.html
@@ -431,8 +431,9 @@ Sparse Days 2022</a>, Saint-Girons, France.
 <dl>
 [Virtual]
   <!--<a href= "https://stratcomm-elements.lbl.gov/berkeley-lab-events-calendar/" target="_blank">-->
-  <a href= "https://crd.lbl.gov/resources/computing-sciences-seminars/" target="_blank">
-       Talk</a>
+  <!--<a href= "https://crd.lbl.gov/resources/computing-sciences-seminars/" target="_blank">
+       Talk</a>-->
+	Talk
  at
   <a href= "https://crd.lbl.gov/" target="_blank">
 Lawrence Berkeley National Laboratory</a>.
