--- a/index.html
+++ b/index.html
@@ -116,18 +116,18 @@ My research focuses on designing techniques for accelerating large-scale graph a
             I was a postdoctoral researcher
             with Inria, CNRS, and Labex MILYON,
             in the
-            <a href="http://www.ens-lyon.fr/LIP/ROMA/" target="_blank">ROMA</a>
+            <a href="https://www.ens-lyon.fr/LIP/ROMA/" target="_blank">ROMA</a>
             team at
-            <a href="http://www.ens-lyon.fr/LIP/" target="_blank">LIP</a>, ENS de Lyon, where I was
+            <a href="https://www.ens-lyon.fr/LIP/" target="_blank">LIP</a>, ENS de Lyon, where I was
             hosted by
             <a href="https://perso.ens-lyon.fr/bora.ucar/" target="_blank">Bora Uçar</a>. Prior
             to that, I obtained my Ph.D. (and Master's) from the
-            <a href="http://www.cse.iitm.ac.in/" target="_blank">
+            <a href="https://www.cse.iitm.ac.in/" target="_blank">
               Indian Institute of Technology Madras</a
             >
             under the supervision of
             <!--I was advised by -->
-            <a href="http://www.cse.iitm.ac.in/~rupesh/" target="_blank">Rupesh Nasre</a>.
+            <a href="https://www.cse.iitm.ac.in/~rupesh/" target="_blank">Rupesh Nasre</a>.
           </p>
           <!--
 	 <p>
