--- a/research.html
+++ b/research.html
@@ -170,6 +170,7 @@ BANG: Billion-Scale Approximate Nearest Neighbour Search using a Single GPU
   <!-- <a href="docs/papers/arxiv24b.pdf" target="_blank">(pdf)</a> -->
   <a href="https://arxiv.org/abs/2401.11324" target="_blank">(preprint)</a>
   <a href="https://doi.org/10.1109/tbdata.2025.3581085" target="_blank">(doi)</a>
+  <a href="https://github.com/karthik86248/BANG-Billion-Scale-ANN" target="_blank">(code)</a>
   <a href="https://dream-lab.github.io/indosys-2025" target="_blank">(presentation by Karthik)</a>
 </p>
 
