--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ My research focuses on designing techniques for accelerating large-scale graph a
             <!-- GPUs, aided by approximate computing.-->
             I am a R&amp;D software engineer at Siemens EDA in Meylan, Grenoble, France. Previously,
             I was a postdoctoral researcher
-            with Inria, CNRS, and Labex MILYON,
+            with Inria, CNRS, and LabEx MILYON,
             in the
             <a href="https://www.ens-lyon.fr/LIP/ROMA/" target="_blank">ROMA</a>
             team at
